[package]
name = "rusty-blog"
version = "0.1.0"
authors = ["Simon Goller <neosam+github@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
markdown = "0.2"
tinytemplate = "1.0"
serde = "1.0"
