[package]
name = "rusty-blog"
version = "0.1.4-dev"
authors = ["Simon Goller <neosam+github@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
actix-rt = "2.2"
actix-files = "0.5"
mdbook = "0.4"
handlebars = "3.0"
serde = "1.0"
serde_yaml = "0.8"
log = "0.4"
env_logger = "0.8"
lazy_static = "1.4"
rss = "1.9"
chrono = { version = "0.4", features = ["serde"] }
